--- a/asd-projects/snake/index.css
+++ b/asd-projects/snake/index.css
@@ -1,12 +1,13 @@
 
 body {
-  background-color: darkgreen;
+  background-color: rgb(42, 38, 43);
+  background-image: url("https://wallpapers.com/images/featured/minecraft-s2kxfahyg30sob8q.jpg");
 }
 
 #board {
   width: 440px;
   height: 440px;
-  border: 1px solid white;
+  border: 4px solid rgb(255, 255, 255);
   background-color: black;
 }
 
