--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -1,21 +1,23 @@
 
 body {
-  background-color: darkgreen;
+  background-color: rgb(42, 38, 43);
+  background-image: url("https://wallpapers.com/images/featured/minecraft-s2kxfahyg30sob8q.jpg");
 }
 
 #board {
   width: 440px;
   height: 440px;
-  border: 1px solid white;
+  border: 4px solid rgb(255, 255, 255);
   background-color: black;
   position: relative;
 }
 
-#gameItem {
-  background-color: teal;
+#walker {
+  background-color: rgb(87, 0, 128);
   width: 50px;
   height: 50px;
   position: absolute;
-/*   left: 100px; */  /* Uncomment if you want to set a "starting" position */
-/*   top: 100px;  */  /* Uncomment if you want to set a "starting" position */
+  left: 196px;  /* Uncomment if you want to set a "starting" position */
+  top: 196px;   /* Uncomment if you want to set a "starting" position */
+  border-radius: 50px;
 }
