--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -17,7 +17,16 @@ body {
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 196px;  /* Uncomment if you want to set a "starting" position */
-  top: 196px;   /* Uncomment if you want to set a "starting" position */
+  left: 5px;  /* Uncomment if you want to set a "starting" position */
+  top: 5px;   /* Uncomment if you want to set a "starting" position */
+  border-radius: 50px;
+}
+#walker2 {
+  background-color: rgb(0, 30, 163);
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 385px;
+  top: 385px;
   border-radius: 50px;
 }
