--- a/asd-projects/walker/index.css
+++ b/asd-projects/walker/index.css
@@ -13,20 +13,20 @@ body {
 }
 
 #walker {
-  background-color: rgb(87, 0, 128);
+  background-color: rgb(0, 188, 190, 255);
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 5px;  /* Uncomment if you want to set a "starting" position */
-  top: 5px;   /* Uncomment if you want to set a "starting" position */
+  left: 385px;  /* Uncomment if you want to set a "starting" position */
+  top: 385px;   /* Uncomment if you want to set a "starting" position */
   border-radius: 50px;
 }
 #walker2 {
-  background-color: rgb(0, 30, 163);
+  background-color: rgb(12, 130, 7, 255);
   width: 50px;
   height: 50px;
   position: absolute;
-  left: 385px;
-  top: 385px;
+  left: 5px;
+  top: 5px;
   border-radius: 50px;
 }
