--- a/asd-projects/pong/index.css
+++ b/asd-projects/pong/index.css
@@ -1,7 +1,7 @@
 
 body {
   background-color: rgb(37, 37, 37);
-  background-image: url("");
+  background-image: url("https://wallpapers.com/images/hd/cool-red-background-y1cobqb0l6f4rwcd.jpg");
 }
 
 #board {
